--- a/instruction_de_latelier.mkd
+++ b/instruction_de_latelier.mkd
@@ -44,11 +44,17 @@ Petit exercice sur le contrôleur de révision **GIT** .
             
             Amender un commit me permet de modifier le DERNIER commit en modifier un fichier ou le message du commit
 
+## <a name="Rollback"/> Retour en arrière 
+
+* Visualiser le contenu du **commit** : b1c717f0384de9e9c7b386edcc38f5ff2c5c8071
+
+* Faire un **revert** de cette modification qui ne devrait pas être présent et valider que le contenu du commit est bien supprimé 
+
 ## <a name="Gestion_de_branche"/> Gestion de branche 
 
 * Créez une Branche nommée **atelier02** et basculer sur cette branche
 
-* Sous cette branche faire la créer le fichier : **fichier\_from\_atelier02.txt**
+* Sous cette branche faire la créer le fichier : **fichier\_from\_atelier02.sh**
 
         #!/bin/bash
         #
@@ -60,3 +66,32 @@ Petit exercice sur le contrôleur de révision **GIT** .
 
         #une commande similaire
         echo "Thomas" |  od -A n -t x1 |sed 's/ /\\x/g'
+
+* Ajouter et commité le fichier avec le message : " fichier qui donne de l'hexa :D "
+
+* Revenir dans la Branche **master** et commiter , normalement ce devrais être direct comme commit !
+
+* Sous la Branche master créer le fichier : __30\_caractere\_random.txt__ avec le contenu :
+
+        Voici 30 caractère random !!  : 
+        ci-dessous 
+
+* Ajouter les 30 caractère random à l'aide de la commande : 
+
+        $ strings /dev/urandom | grep -o '[[:alnum:]]' | head -n 30 | tr -d '\n' >> 30_caractere_random.txt
+
+* ajouter et commiter le fichier dans la branche **master** 
+
+* Créez une Branche nommée **branche_pas_facile** et basculer sur cette branche
+
+* Editer le fichier et supprimer la ligne générer des 30 caractère avec votre editeur préféré. tous en conservant le texte entré à la main.
+
+* Réutiliser la commande pour générer les chiffres random :
+
+        $ strings /dev/urandom | grep -o '[[:alnum:]]' | head -n 30 | tr -d '\n' >> 30_caractere_random.txt
+ 
+* Commiter dans votre branche **branche_pas_facile**
+
+* Retourner dans la branche **master** et merger les modifications depuis la branche **branche_pas_facile** , vous devriez avoir un conflit sur le fichier __30\_caractere\_random.txt__ .
+
+* Résolvez le conflit en conservant la valeur généré dans la branche **branche_pas_facile**
